<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:visibility="visible"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="15sp"
        android:background="@null"
        android:clickable="false"
        android:layout_marginStart="20dp"
        android:layout_gravity="start"
        android:contentDescription="@string/circular_image"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cat_icon" />

    <TextView
        android:id="@+id/idlbl"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name" />

    <TextView
        android:id="@+id/nameLabel"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textSize="25sp"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/name"
        android:visibility="visible"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        tool:text="Juan Escutia"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/dobLabel"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        android:text="@string/date_of_birth" />

    <EditText
        android:id="@+id/DOBview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:textSize="25sp"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/emptyDate" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="end"
        android:background="@drawable/borde_redondo"
        />

<!--    <Button-->
<!--        android:id="@+id/seleccionar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone"-->
<!--        android:layout_gravity="end"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:background="@drawable/borde_redondo"-->
<!--        android:text="@string/seleccionar" />-->

</LinearLayout>