<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tool="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/wblue"
    android:layout_margin="6dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="15sp"
                android:layout_marginStart="16dp"
                android:background="@drawable/borde_redondo"
                android:clickable="false"
                android:contentDescription="@string/circular_image"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333"
                android:src="@drawable/cat_icon"
                tool:src="@drawable/cat_icon" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tool:text="Juan Escutia" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10sp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10sp"
                        android:text="@string/dob"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginBottom="10sp"
                        android:textSize="12sp"
                        tool:text="15 Noviembre 2010" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/edit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="15sp"
                android:clickable="true"
                android:background="@null"
                android:contentDescription="@string/edit"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true" />

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginStart="3sp"
                android:layout_marginBottom="15sp"
                android:background="@null"
                android:contentDescription="@string/trash_can"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.cardview.widget.CardView>